# philpatton.github.io

./: .gitignore  PlosOne-DataFinnmark.csv  _environment  _quarto.yml  about.qmd  bioss-pres.html  cjs.qmd  closed_cmr.ipynb  closed_cmr.qmd  comparison.ipynb  comparison.qmd  cormorant.csv  cv.qmd  defense.qmd  detectionFreq.NH17.csv  dipper.csv  dist.ipynb  dist.qmd  distance.qmd  firth.txt  general.R  index.qmd  js.bug  js.r  jssa.qmd  msom-pr.ipynb  msom.ipynb  msom.qmd  msom_richness.txt  notebooks.qmd  numpyro-cjs.qmd  numpyro-intro.qmd  numpyro-js.ipynb  numpyro-js.qmd  numpyro-occ.qmd  numpyro-scr-temp.ipynb  numpyro-scr.html  numpyro-scr.ipynb  numpyro-scr.py  occ.ipynb  (+25 more)
.ipynb_checkpoints/: cjs-checkpoint.ipynb  closed_cmr-checkpoint.ipynb  comparison-checkpoint.ipynb  dist-checkpoint.ipynb  dist-checkpoint.qmd  distance-checkpoint.ipynb  jssa-checkpoint.ipynb  msom-checkpoint.ipynb  msom-pr-checkpoint.ipynb  occ-checkpoint.ipynb  occupancy-checkpoint.ipynb  prbirds-checkpoint.csv  refs-checkpoint.bib  scr-checkpoint.ipynb  scr-checkpoint.qmd  surv-checkpoint.ipynb  surv-checkpoint.qmd
.jupyter_cache/: global.db
docs/: about.html  cjs.html  closed_cmr.html  comparison.html  cv.html  defense.html  dist.html  distance.html  index.html  jssa.html  msom-Copy1.html  msom-pr.html  msom.html  notebooks.html  numpyro-cjs.html  numpyro-intro.html  numpyro-js.html  numpyro-occ.html  numpyro-scr-temp.html  numpyro-scr.ipynb  occ.html  occ.ipynb  occupancy.html  pymc-cjs.html  pymc-closed-cmr.html  pymc-distance.html  pymc-jssa.html  pymc-msom.html  pymc-occupancy.html  (+5 more)
(+80 files in other folders)
