[project]
name = "philpatton-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.21.0",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "numba>=0.61.0",
    "nutpie>=0.14.3",
    "pymc>=5.22.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "watermark>=2.5.0",
]
